# pdf-api

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  service.yaml
.github/workflows/: deploy.yml
app/: api_errors.py  auth.py  config.py  http_utils.py  main.py  router.py  router_v2.py  v2_options.py
app/services/: _repair_worker.py  pdf_tools.py
app/tools/: compress.py  convert.py  echo.py  fill_form.py  flatten.py  ocr.py  pdf_to_image.py  pdfa.py  protect.py  redact.py
docs/: frontend-v2-migration.md
tests/: _env.py  conftest.py  test_auth.py  test_compress.py  test_convert.py  test_dependencies.py  test_echo.py  test_extract_matches.py  test_fill_form.py  test_flatten.py  test_health.py  test_ocr.py  test_pdf_repair.py  test_pdf_to_image.py  test_pdf_to_word.py  test_pdf_to_xlsx.py  test_pdfa.py  test_protect.py  test_redact.py  test_redact_apply_with_ids.py  test_redact_match_id.py  test_redact_preview.py  test_redact_scrub.py  test_repair_fixtures.py  test_unlock_pdf.py  test_upload_limits.py  test_v1_regressions.py  test_v2_api.py
tests/fixtures/: gen_excel_fixtures.py  gen_repair_fixtures.py
